kubernetes/main/www/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website-svc
  namespace: bernardoforcillo-com
spec:
  type: NodePort
  selector:
    app: bernardoforcillo-com
    tier: personal-website
  ports:
    - port: 30001
      targetPort: 3000
      protocol: TCP
