kubernetes/main/www/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: personal-website-ingress
  namespace: bernardoforcillo-com
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: (Host(`bernardoforcillo.com`) || Host(`www.bernardoforcillo.com`))
      kind: Rule
      services:
        - name: personal-website-svc
          port: 30001
      middlewares:
        - name: redirect-http-to-https
          namespace: bernardoforcillo-com
        - name: redirect-to-non-www
          namespace: bernardoforcillo-com
        - name: rate-limit
          namespace: bernardoforcillo-com
        - name: security
          namespace: bernardoforcillo-com
  tls:
    secretName: personal-website-tls
    options:
      name: tlsoptions
      namespace: bernardoforcillo-com
